# PiLedger

./: .dockerignore  .gitignore  CHANGELOG-ARCHIVE.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  app.py  auth.py  constants.py  db.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  schemas.py  start.sh
.claude/commands/: grill-with-docs.md
.github/workflows/: ci.yml
design-system/piledger/: MASTER.md
docs/: api-reference.md  architecture.md  authentication.md  backups.md  budgeting.md  csv-import.md  database.md  deployment.md  frontend.md  getting-started.md  security.md  testing.md
docs/adr/: 0001-pat-data-plane-security-plane-split.md  0002-audit-log-system-security-record.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/public/: manifest.json
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  types.ts
src/: app.py  auth.py  constants.py  db.py  limiter.py  logging_config.py  schemas.py  security.py
src/routers/: __init__.py  accounts.py  auth.py  budget.py  categories.py  dashboard.py  goals.py  imports.py  ops.py  pages.py  prefs.py  rates.py  subscriptions.py  (+2 more)
static/: app.js  index.html  login.html  login.js  style.css  theme-bootstrap.js
tests/: conftest.py  test_accounts.py  test_api_tokens.py  test_auth.py  test_balances.py  test_budget.py  test_categories.py  test_csv_import_service.py  test_currency.py  test_dashboard.py  test_db_connection.py  test_delete_me.py  test_docs_gating.py  test_edge_cases.py  test_export.py  test_goals.py  test_healthz.py  test_imports.py  test_loans.py  test_logging_config.py  test_migrations.py  test_money.py  test_password_change.py  test_prefs.py  test_rate_limit.py  test_recorded_at_parser.py  test_request_id.py  test_route_table.py  test_security_headers.py  test_sessions_and_cookies.py  test_static_assets.py  test_subscriptions.py  test_subscriptions_service.py  test_subtype_frontend_parity.py  test_subtypes.py  test_transactions.py  test_transfers.py
(+211 files in other folders)
