[project]
name = "piledger"
version = "0.23.0"
description = "Self-hosted personal finance dashboard"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0,<0.136.3",
    "uvicorn[standard]>=0.24.0",
    "slowapi>=0.1.9",
    # Security floor: starlette < 1.3.1 is flagged by pip-audit for
    # CVE-2026-54282 (fixed in 1.3.0) and CVE-2026-54283 (fixed in 1.3.1).
    # It is a transitive dependency of fastapi, which only requires
    # starlette>=0.46.0, so pin the patched floor here explicitly. Remove once
    # fastapi's own floor moves past it.
    "starlette>=1.3.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "httpx>=0.25",
    "pytest-playwright>=0.5",
    "ruff>=0.6",
    "pip-audit>=2.7",
    "mypy>=1.11",
    "pytest-cov>=5.0",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/schemas.py", "src/auth.py", "src/db.py", "src/constants.py"]

[tool.ruff.lint]
# Keep ruff's default rules (E/F) and add pydocstyle's *presence* checks so new
# public functions and methods must carry a docstring. Only the presence codes
# are enabled (not the D2xx/D4xx formatting rules), so existing docstring wording
# is left untouched. Note: pydocstyle's D1xx fire on public names only, so
# private (underscore-prefixed) helpers aren't enforced by the linter — those are
# documented by hand.
extend-select = ["D102", "D103"]

[tool.ruff.lint.per-file-ignores]
# Test functions are self-documenting through their names.
"tests/**" = ["D"]
